fix products page not centered

--- a/binbash/Content/Styles/Site.css
+++ b/binbash/Content/Styles/Site.css
@@ -6,6 +6,7 @@
 body {
     position: absolute;
     min-height: 100%;
+    width: 100%;
     padding-top: 50px;
     padding-bottom: 80px;
 }
